tests/src/frontend/typechecking/exhaustiveness/invalid/many_parents_overrides_positional_non_exh.sk
base class Top
base class P1(p1: Int) extends Top
base class P2(p2: Int) extends Top
base class P3(p3: Int) extends Top
base class P4(p4: Int) extends Top

base class SP1(sp1: Bool) extends P1
base class SP2(sp2: String) extends P2
base class SP3(sp3: Int) extends P3
base class SP4(sp4: Char) extends P4

class Join(String) extends SP1, SP2, SP3, SP4

fun myMatch(x: Top): String {
  x match {
  | Join(_, true, _, "b", _, 3, _, 'c', _) -> "P"
  | Join(_, false, _, "b", _, 3, _, 'c', _) -> "a"
  | Join("a", _, _, "c", _, 3, _, 'c', _) -> "s1"
  | Join(_, _, _, "c", _, _, _, _, _) -> "s2"
  }
}
